--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "4.16.2",
     "@radix-ui/colors": "^1.0.0",
     "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.4",
     "@types/node": "20.4.0",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
