--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "framer-motion": "^10.12.18",
+    "mongodb": "^5.7.0",
     "next": "13.4.9",
     "next-auth": "^4.22.1",
     "postcss": "8.4.25",
