--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "13.4.9",
     "next-auth": "^4.22.1",
     "postcss": "8.4.25",
+    "pwa-asset-generator": "^6.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
